# d2game

./: .gitignore  Cargo.toml  Readme.md  build.rs
res/: player.mtl  player_skeleton_walk.gltf  player_walk.gltf
res/Blender/: player.blend  player_skeleton_walk.blend  player_skeleton_walk.blend1  player_walk.blend  player_walk.blend1  player_walk_texture.blend
res/player_walk_texture/: player_walk_texture.gltf
shader/: backgound copy.wgsl  backgound.wgsl  background.wgsl  fragment copy.wgsl  fragment.wgsl  item.wgsl  player_gltf.wgsl  vertex copy.wgsl  vertex.wgsl
src/: background.rs  camera.rs  debug_uniform.rs  gltf_parser.rs  item.rs  main.rs  model.rs  player.rs  player_objver.rs  render_pipeline.rs  resource.rs  vertex.rs
src/config/: graph.toml
src/engine/: background.rs  bindgroup.rs  buffer.rs  camera.rs  config.rs  entity.rs  instance.rs  material.rs  mesh.rs  mod.rs  model.rs  model_obj.rs.deprecated  module.rs  render_pipeline.rs  renderer.rs  resource.rs  resource_obj.rs.deprecated  scene.rs  shader.rs  texture.rs  vertex.rs
src/engine/controller/: mod.rs
src/engine/resources/: Readme.md  file.rs  material.rs  mesh.rs  mod.rs  node.rs  scene.rs  texture.rs
wgpu_util/: Cargo.toml
wgpu_util/src/: lib.rs
wgpu_util/src/framework/: logger.rs  mod.rs
wgpu_util/src/hal/: mod.rs
