[package]
name = "d2_plane_game"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu_util = {path = "wgpu_util"}
wgpu = "26.0.1"
winit = "0.30.12"
cgmath = "0.18.0"
image = "0.25.8"
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
tobj = { version = "4.0.3", features = ["async", "tokio"] }
serde = { version = "1.0.227", features = ["derive"] }
toml = "0.9.7"

[build-dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"

[workspace]
resolver = "3"
members = ["wgpu_util"]
